Jugamos con enlace de clases y enlace de estilos CSS.

--- a/Agenda/src/app/app.component.html
+++ b/Agenda/src/app/app.component.html
@@ -1,4 +1,9 @@
 <header>
   <h1>Mi Agenda</h1>
 </header>
-<lista-contactos [datos]="contactos"></lista-contactos>
+<!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
+     que se ha expuesto en éste. Si queremos evaluar una expresión previamente
+     a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
+<lista-contactos
+  [datos]="contactos"
+  (clickEnEliminar)="eliminarContacto($event)"></lista-contactos>
