Creamos nuestro primer formulario para el alta de contactos.

--- a/Agenda/src/app/app.component.html
+++ b/Agenda/src/app/app.component.html
@@ -1,6 +1,10 @@
 <header>
   <h1>Mi Agenda</h1>
 </header>
+
+<formulario-alta
+  (clickEnGuardar)="guardarContacto($event)"></formulario-alta>
+
 <!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
      que se ha expuesto en éste. Si queremos evaluar una expresión previamente
      a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
