Añadimos Skeleton para hacer nuestra app responsive.

--- a/Agenda/src/app/app.component.html
+++ b/Agenda/src/app/app.component.html
@@ -1,13 +1,17 @@
-<header>
-  <h1>Mi Agenda</h1>
-</header>
+<div class="container">
 
-<formulario-alta
-  (clickEnGuardar)="guardarContacto($event)"></formulario-alta>
+  <header>
+    <h1>Mi Agenda</h1>
+  </header>
 
-<!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
-     que se ha expuesto en éste. Si queremos evaluar una expresión previamente
-     a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
-<lista-contactos
-  [datos]="contactos"
-  (clickEnEliminar)="eliminarContacto($event)"></lista-contactos>
+  <formulario-alta
+    (clickEnGuardar)="guardarContacto($event)"></formulario-alta>
+
+  <!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
+      que se ha expuesto en éste. Si queremos evaluar una expresión previamente
+      a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
+  <lista-contactos
+    [datos]="contactos"
+    (clickEnEliminar)="eliminarContacto($event)"></lista-contactos>
+
+</div>
