--- a/Agenda/src/app/app.component.html
+++ b/Agenda/src/app/app.component.html
@@ -8,10 +8,14 @@
     (clickEnGuardar)="guardarContacto($event)"></formulario-alta>
 
   <!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
-      que se ha expuesto en éste. Si queremos evaluar una expresión previamente
-      a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
+       que se ha expuesto en éste. Si queremos evaluar una expresión previamente
+       a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
+
+  <!-- Cuando trabajamos con 'Observables' en los templates, podemos ayudarnos del
+       pipe 'async'. Este pipe lo que hace es gestionar la suscripción y desuscripción
+       del 'Observable' en cuestión. -->
   <lista-contactos
-    [datos]="contactos | async"
+    [datos]="contactos$ | async"
     (clickEnEliminar)="eliminarContacto($event)"></lista-contactos>
 
 </div>
