Reorganizamos los componentes de la agenda para respetar el SPA.

--- a/Agenda/src/app/mis-contactos/mis-contactos.component.html
+++ b/Agenda/src/app/mis-contactos/mis-contactos.component.html
@@ -1,3 +1,9 @@
-<p>
-  mis-contactos works!
-</p>
+<!-- Para enlazar datos en un componente hijo, basta con indicar el atributo
+       que se ha expuesto en éste. Si queremos evaluar una expresión previamente
+       a su asignación como valor del atributo, envolvemos con corchetes el atributo. -->
+
+<!-- Cuando trabajamos con 'Observables' en los templates, podemos ayudarnos del
+      pipe 'async'. Este pipe lo que hace es gestionar la suscripción y desuscripción
+      del 'Observable' en cuestión. -->
+
+<lista-contactos [datos]="contactos$ | async"></lista-contactos>
